success alignement menu

--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+        type='text/css'>
+    <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+    <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/c78fdf2e47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Ohmyfood</title>
 </head>
@@ -20,7 +27,7 @@
     </header>
 
     <section class="content">
-        <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto_menu">
+        <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto_menu">
 
 
         <div class="menu">
@@ -28,7 +35,7 @@
                 <div class="titre_icone main_titre_menu">
                     <div class="titre_lieu">
                         <a href="restaurant_1.html">
-                            <h2 class="titre" id="main_titre_menu">Le délice des sens</h2>
+                            <h2 class="titre palette" id="main_titre_menu">La palette du goût</h2>
                         </a>
                     </div>
 
@@ -40,8 +47,8 @@
                      149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
                             </path>
                             <defs>
-    
-    
+
+
                                 <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
                                     <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
                                     <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
@@ -53,133 +60,134 @@
 
                 </div>
                 <div class="categories_food">
-                    <div class="entrees">
+                    <div class="entrees" id="entrees">
                         <h3>ENTRÉES</h3>
                         <hr />
                         <div class="button entree_element element_1">
                             <div class="titre_element">
-                                <h2>Tartare de thon</h2>
-                                <h3>Assaisonné au yuzu</h3>
+                                <h2>Fricassée d'escargot</h2>
+                                <h3>Au piment d'espelette</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>25€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
                         </div>
                         <div class="button entree_element element_2">
                             <div class="titre_element">
-                                <h2>Bouchée de homard croustillant</h2>
-                                <h3>Et sa farandole de petits légumes</h3>
+                                <h2>fois gras de canard mi-cuit</h2>
+                                <h3>et ses copeaux de truffe noire</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button entree_element element_3">
                             <div class="titre_element">
-                                <h2>Velouté de cèpes</h2>
-                                <h3>Aux truffes</h3>
+                                <h2>Oeuf au plat</h2>
+                                <h3>Assaisonné à la truffe sur lit de caviar</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>20€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="plats">
+                    <div class="plats" id="plats">
                         <h3>PLATS</h3>
                         <hr />
                         <div class="button plats_element  element_1">
                             <div class="titre_element">
-                                <h2>Poulet rôti aux herbes de Provence</h2>
-                                <h3>Et sa crème de truffe</h3>
+                                <h2>Filet de boeuf aux herbes</h2>
+                                <h3>Accompagné de sa ribambelle de légumes</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>40€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
                         </div>
                         <div class="button plats_element element_2">
                             <div class="titre_element">
-                                <h2>Langouste rôtie</h2>
-                                <h3>Et ses légumes de saison</h3>
+                                <h2>Parmentier de queue de boeuf</h2>
+                                <h3>À la truffe noire sur sa purée de panais</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>35€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button plats_element element_3">
                             <div class="titre_element">
-                                <h2>Côte de boeuf Angus </h2>
-                                <h3>Et sa purée de panais</h3>
+                                <h2>Filet de turbot</h2>
+                                <h3>Aux agrumes</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>44€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
-                    <div class="desserts">
+                    <div class="desserts" id="desserts">
                         <h3>DESSERTS</h3>
                         <hr />
                         <div class="button desserts_element  element_1">
                             <div class="titre_element">
-                                <h2>Farandole de desserts</h2>
-                                <h3>Du chef</h3>
+                                <h2>Paris-Brest</h2>
+                                <h3>Revisité</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>18€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
 
 
                         </div>
                         <div class="button desserts_element element_2">
                             <div class="titre_element">
-                                <h2>Crème brulée </h2>
-                                <h3>Revisitée</h3>
+                                <h2> Macaron au chocolat d'exception </h2>
+                                <h3>Et glace à la vanille de Madagascar</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>22€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                         <div class="button desserts_element element_3">
                             <div class="titre_element">
-                                <h2>Tiramisu</h2>
-                                <h3>À la noisette</h3>
+                                <h2>Mousse au chocolat</h2>
+                                <h3>Au piment d'Espelette et à la truffe noire</h3>
                             </div>
                             <div class="prix_element">
                                 <h3>23€</h3>
                             </div>
                             <div class="green">
-                                <img class="logo_check" src="logo/check-circle-solid.svg" alt="check">
+                                <i class="fas fa-check-circle fa-2x"></i>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
             <div id="button_explore" class="button button_commander">
                 <a href="#">Commander</a>
@@ -188,6 +196,200 @@
 
 
     </section>
+
+    <!-- nouveau contenu en constructioun DEBUT -->
+    <section class="contenu">
+        <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="palette du gout photo">
+        <div class="menu_fond_gris">
+
+            <div class="conteneur_titre_coeur">
+                <h2 class="titre_principal_menu">Le délice des sens</h2>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">ENTRÉES</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Tartare de thon</h2>
+                        <h3 class="description">Assaisonné au yuzu</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>25€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Bouchée de homard croustillant</h2>
+                        <h3 class="description">Et sa farandole de petits légumes</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Velouté de cèpes</h2>
+                        <h3 class="description">Aux truffes</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>20€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">PLATS</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Poulet rôti aux herbes de Provence</h2>
+                        <h3 class="description">Et sa crème de truffe</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>40€</h2>
+                    </div>
+
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Langouste rôtie</h2>
+                        <h3 class="description">Et ses légumes de saison</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>35€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Côte de boeuf Angus</h2>
+                        <h3 class="description">Aux agrumes</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>44€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_titre_ligne_verte">
+                <h3 class="titre_e_p_d">DESSERTS</h3>
+                <hr class="ligne_verte" />
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Farandole de desserts</h2>
+                        <h3 class="description">Du chef</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>18€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Crème brulée</h2>
+                        <h3 class="description">Revisitée</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>22€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="conteneur_E_P_D">
+                <div class="conteneur_E_P_D_niveau_1">
+                    <div class="conteneur_titre_et_description">
+                        <h2 class="titre_food">Tiramisu</h2>
+                        <h3 class="description">Au piment d'Espelette et à la truffe noire</h3>
+                    </div>
+
+                    <div class="conteneur_prix">
+                        <h2>23€</h2>
+                    </div>
+                    <div class="green">
+                        <i class="fas fa-check-circle fa-2x"></i>
+                    </div>
+
+                </div>
+            </div>
+
+            <div id="button_explore" class="button button_commander bouton_rose_menu">
+                <a href="#">Commander</a>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- nouveau contenu en constructioun FIN -->
+
 
 
     <footer>
@@ -205,7 +407,7 @@
         </div>
 
         <h1>Mentions légales</h1>
-        <a  class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
+        <a class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
             <h2>Contact</h2>
         </a>
 
