--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -386,6 +386,10 @@
             </div>
 
         </div>
+
+        <div class="double_fond_gris">
+            
+        </div>
     </section>
 
     <!-- nouveau contenu en constructioun FIN -->
