ajout fond gris sur ttes page

--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -234,6 +234,11 @@
             </div>
 
         </div>
+
+        <div class="double_fond_gris">
+            
+        </div>
+
     </section>
 
     <!-- nouveau contenu en constructioun FIN -->
