--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -216,6 +216,11 @@
             </div>
 
         </div>
+
+        <div class="double_fond_gris">
+            
+        </div>
+        
     </section>
 
     <!-- nouveau contenu en constructioun FIN -->
