remove fond gris, ajout margin negative

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -211,9 +211,9 @@
 
         </div>
 
-        <div class="double_fond_gris">
+        <!-- <div class="double_fond_gris">
             
-        </div>
+        </div> -->
 
     </section>
 
