--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -235,9 +235,9 @@
 
         </div>
 
-        <div class="double_fond_gris">
+        <!-- <div class="double_fond_gris">
             
-        </div>
+        </div> -->
 
     </section>
 
