--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -217,9 +217,9 @@
 
         </div>
 
-        <div class="double_fond_gris">
+        <!-- <div class="double_fond_gris">
             
-        </div>
+        </div> -->
         
     </section>
 
