--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -216,9 +216,9 @@
 
         </div>
 
-        <div class="double_fond_gris">
+        <!-- <div class="double_fond_gris">
             
-        </div>
+        </div> -->
     </section>
 
     <!-- nouveau contenu en constructioun FIN -->
