--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -28,10 +28,10 @@
 
             <div class="conteneur_titre_coeur">
                 <h2 class="titre_principal_menu">La palette du goût</h2>
-                <div class="conteneur_coeur">
+                <!-- <div class="conteneur_coeur"> -->
                     <i class="far fa-heart fa-3x premier_coeur"></i>
                     <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
-                </div>
+                <!-- </div> -->
             </div>
 
             <div class="conteneur_titre_ligne_verte">
