--- a/index.html
+++ b/index.html
@@ -91,22 +91,9 @@
                     </a>
                     <h3>Ménilmontant</h3>
                 </div>
-                <div class="icon heart">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
-                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="-5 0 524 512">
-                        <path fill="" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1
-                 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
-                        </path>
-                        <defs>
-
-
-                            <linearGradient id="grad1" x1="0%" y1="0%" x2="0%" y2="100%">
-                                <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
-                            </linearGradient>
-                        </defs>
-                    </svg>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
                 </div>
             </div>
         </div>
@@ -126,22 +113,9 @@
                     </a>
                     <h3>Charonne</h3>
                 </div>
-                <div class="icon heart">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
-                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="-5 0 524 512">
-                        <path fill="" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1
-             149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
-                        </path>
-                        <defs>
-
-
-                            <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
-                                <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
-                            </linearGradient>
-                        </defs>
-                    </svg>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
                 </div>
             </div>
         </div>
@@ -161,22 +135,9 @@
                     </a>
                     <h3>Cité Rouge</h3>
                 </div>
-                <div class="icon heart">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
-                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="-5 0 524 512">
-                        <path fill="" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1
-             149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
-                        </path>
-                        <defs>
-
-
-                            <linearGradient id="grad3" x1="0%" y1="0%" x2="0%" y2="100%">
-                                <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
-                            </linearGradient>
-                        </defs>
-                    </svg>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
                 </div>
             </div>
         </div>
@@ -196,22 +157,9 @@
                     </a>
                     <h3>Folie-Méricourt</h3>
                 </div>
-                <div class="icon heart">
-                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart"
-                        class="svg-inline--fa fa-heart fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="-5 0 524 512">
-                        <path fill="" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1
-             149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
-                        </path>
-                        <defs>
-
-
-                            <linearGradient id="grad4" x1="0%" y1="0%" x2="0%" y2="100%">
-                                <stop offset="0%" style="stop-color:#9356DC;stop-opacity:1" />
-                                <stop offset="100%" style="stop-color:#FF79DA ;stop-opacity:1" />
-                            </linearGradient>
-                        </defs>
-                    </svg>
+                <div class="conteneur_coeur">
+                    <i class="far fa-heart fa-3x premier_coeur"></i>
+                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
                 </div>
             </div>
         </div>
