edition media queries

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     </section>
 
     <section class="restaurants" id="restaurants">
-        <h2>Restaurants</h2>
+        <div class="titre_accueil_restaurants">
+            <h2>Restaurants</h2>
+        </div>
 
 
         <div class="carte_resto">
