--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Fricassée d'escargot</h2>
                         <h3 class="description">Au piment d'Espelette</h3>
@@ -58,7 +58,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Foie gras de canard mi-cuit</h2>
                         <h3 class="description">Et ses copeaux de truffe noire</h3>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Oeuf au plat</h2>
                         <h3 class="description">Assaisonné à la truffe sur lit de caviar</h3>
