--- a/index.html
+++ b/index.html
@@ -102,26 +102,28 @@
         </div>
 
 
-        <div class="carte_resto">
-            <div class="images_icone_nouveau">
-                <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="photo_resto">
-                <div class="nouveau" id="nouveau_2">
-                    <p>Nouveau</p>
+        <a href="restaurant_2.html" class="lien_resto">
+            <div class="carte_resto">
+                <div class="images_icone_nouveau">
+                    <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="photo_resto">
+                    <div class="nouveau" id="nouveau_2">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
+                <div class="titre_icone">
+                    <div class="titre_lieu">
+                        <!-- <a href="restaurant_2.html"> -->
+                            <h2>La note enchantée</h2>
+                        <!-- </a> -->
+                        <h3>Charonne</h3>
+                    </div>
+                    <div class="conteneur_coeur">
+                        <i class="far fa-heart fa-3x premier_coeur"></i>
+                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                    </div>
                 </div>
             </div>
-            <div class="titre_icone">
-                <div class="titre_lieu">
-                    <a href="restaurant_2.html">
-                        <h2>La note enchantée</h2>
-                    </a>
-                    <h3>Charonne</h3>
-                </div>
-                <div class="conteneur_coeur">
-                    <i class="far fa-heart fa-3x premier_coeur"></i>
-                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
-                </div>
-            </div>
-        </div>
+        </a>
 
 
         <div class="carte_resto">
