--- a/index.html
+++ b/index.html
@@ -76,30 +76,26 @@
         </div>
 
 
-        <div class="carte_resto">
-            <div class="images_icone_nouveau">
-                <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau" id="nouveau_1">
-                    <p>Nouveau</p>
+        <a href="restaurant_1.html" class="lien_resto">
+            <div class="carte_resto">
+                <div class="images_icone_nouveau">
+                    <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="" class="photo_resto">
+                    <div class="nouveau" id="nouveau_1">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
+                <div class="titre_icone">
+                    <div class="titre_lieu">
+                            <h2>La palette du goût</h2>
+                        <h3>Ménilmontant</h3>
+                    </div>
+                    <div class="conteneur_coeur">
+                        <i class="far fa-heart fa-3x premier_coeur"></i>
+                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                    </div>
                 </div>
             </div>
-
-
-
-
-            <div class="titre_icone">
-                <div class="titre_lieu">
-                    <a href="restaurant_1.html">
-                        <h2>La palette du goût</h2>
-                    </a>
-                    <h3>Ménilmontant</h3>
-                </div>
-                <div class="conteneur_coeur">
-                    <i class="far fa-heart fa-3x premier_coeur"></i>
-                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
-                </div>
-            </div>
-        </div>
+        </a>
 
 
         <a href="restaurant_2.html" class="lien_resto">
@@ -112,9 +108,7 @@
                 </div>
                 <div class="titre_icone">
                     <div class="titre_lieu">
-                        <!-- <a href="restaurant_2.html"> -->
                             <h2>La note enchantée</h2>
-                        <!-- </a> -->
                         <h3>Charonne</h3>
                     </div>
                     <div class="conteneur_coeur">
@@ -126,48 +120,48 @@
         </a>
 
 
-        <div class="carte_resto">
-            <div class="images_icone_nouveau">
-                <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau" id="nouveau_3">
-                    <p>Nouveau</p>
+        <a href="restaurant_3.html" class="lien_resto">
+            <div class="carte_resto">
+                <div class="images_icone_nouveau">
+                    <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="" class="photo_resto">
+                    <div class="nouveau" id="nouveau_3">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
+                <div class="titre_icone">
+                    <div class="titre_lieu">
+                            <h2>À la française</h2>
+                        <h3>Cité Rouge</h3>
+                    </div>
+                    <div class="conteneur_coeur">
+                        <i class="far fa-heart fa-3x premier_coeur"></i>
+                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                    </div>
                 </div>
             </div>
-            <div class="titre_icone">
-                <div class="titre_lieu">
-                    <a href="restaurant_3.html">
-                        <h2>À la française</h2>
-                    </a>
-                    <h3>Cité Rouge</h3>
-                </div>
-                <div class="conteneur_coeur">
-                    <i class="far fa-heart fa-3x premier_coeur"></i>
-                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
-                </div>
-            </div>
-        </div>
+        </a>
 
 
-        <div class="carte_resto">
-            <div class="images_icone_nouveau">
-                <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto">
-                <div class="nouveau" id="nouveau_4">
-                    <p>Nouveau</p>
+        <a href="restaurant_4.html" class="lien_resto">
+            <div class="carte_resto">
+                <div class="images_icone_nouveau">
+                    <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="" class="photo_resto">
+                    <div class="nouveau" id="nouveau_4">
+                        <p>Nouveau</p>
+                    </div>
+                </div>
+                <div class="titre_icone">
+                    <div class="titre_lieu">
+                            <h2>Le délice des sens</h2>
+                        <h3>Folie-Méricourt</h3>
+                    </div>
+                    <div class="conteneur_coeur">
+                        <i class="far fa-heart fa-3x premier_coeur"></i>
+                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                    </div>
                 </div>
             </div>
-            <div class="titre_icone">
-                <div class="titre_lieu">
-                    <a href="restaurant_4.html">
-                        <h2>Le délice des sens</h2>
-                    </a>
-                    <h3>Folie-Méricourt</h3>
-                </div>
-                <div class="conteneur_coeur">
-                    <i class="far fa-heart fa-3x premier_coeur"></i>
-                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
-                </div>
-            </div>
-        </div>
+        </a>
 
     </section>
 
