--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Accueil du site Ohmyfood">
     <script src="https://kit.fontawesome.com/c78fdf2e47.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Ohmyfood</title>
 </head>
 
