remplacer coeurs par coeur final

--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -30,8 +30,7 @@
             <div class="conteneur_titre_coeur">
                 <h2 class="titre_principal_menu">À la française</h2>
                 <div class="conteneur_coeur">
-                    <i class="far fa-heart fa-3x premier_coeur"></i>
-                    <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
 
