--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                         <h3>Ménilmontant</h3>
                     </div>
                     <div class="conteneur_coeur">
-                        <i class="far fa-heart fa-3x premier_coeur"></i>
-                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </div>
             </div>
@@ -112,8 +111,7 @@
                         <h3>Charonne</h3>
                     </div>
                     <div class="conteneur_coeur">
-                        <i class="far fa-heart fa-3x premier_coeur"></i>
-                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </div>
             </div>
@@ -134,8 +132,7 @@
                         <h3>Cité Rouge</h3>
                     </div>
                     <div class="conteneur_coeur">
-                        <i class="far fa-heart fa-3x premier_coeur"></i>
-                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </div>
             </div>
@@ -156,8 +153,7 @@
                         <h3>Folie-Méricourt</h3>
                     </div>
                     <div class="conteneur_coeur">
-                        <i class="far fa-heart fa-3x premier_coeur"></i>
-                        <i class="fas fa-heart fa-3x deuxieme_coeur"></i>
+                        <i class="far fa-heart"></i>
                     </div>
                 </div>
             </div>
