ajout html animation menus

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -98,7 +98,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Filet de boeuf aux herbes</h2>
                         <h3 class="description">Accompagné de sa ribambelle de légumes</h3>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Parmentier de queue de boeuf</h2>
                         <h3 class="description">À la truffe noire sur sa purée de panais</h3>
@@ -133,7 +133,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Filet de turbot</h2>
                         <h3 class="description">Aux agrumes</h3>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Paris-Brest</h2>
                         <h3 class="description">Revisité</h3>
@@ -172,7 +172,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Macaron au chocolat d'exception</h2>
                         <h3 class="description">Et glace à la vanille de Madagascar</h3>
@@ -189,7 +189,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Mousse au chocolat</h2>
                         <h3 class="description">Au piment d'Espelette et à la truffe noire</h3>
