--- a/restaurant_2.html
+++ b/restaurant_2.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Ravioles de foie gras</h2>
                         <h3 class="description">Accompagnés de leur crème à la truffe</h3>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Caviar osciètre</h2>
                         <h3 class="description">Sur blini à la farine de blé noir</h3>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Homard et espuma de potiron</h2>
                         <h3 class="description">Mariné aux zestes d'orange</h3>
@@ -93,7 +93,7 @@
 
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_4">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Foie gras de canard cuit entier</h2>
                         <h3 class="description">Confiture de figue et pain toasté</h3>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Noix de coquilles Saint-Jacques</h2>
                         <h3 class="description">Sur lit de purée de céleri-rave</h3>
@@ -134,7 +134,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Langoustine poêlée</h2>
                         <h3 class="description">Purée de patate douce</h3>
@@ -151,7 +151,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Mijoté de queue de boeuf</h2>
                         <h3 class="description">Et riz sauvage aux zestes de citron</h3>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Macaron noisette et chocolat</h2>
                         <h3 class="description">Glace au caramel brun et sel de Guérande</h3>
@@ -190,7 +190,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Macaron au chocolat d'exception</h2>
                         <h3 class="description">Et glace à la vanille de Madagascar</h3>
@@ -207,7 +207,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Mousse au chocolat</h2>
                         <h3 class="description">Au piment d'Espelette et à la truffe noire</h3>
