--- a/restaurant_3.html
+++ b/restaurant_3.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Tartare de poulpe acidulé</h2>
                         <h3 class="description">Aux zestes d'orange</h3>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Velouté de légumes d'antan</h2>
                         <h3 class="description">Carotte, panais, topinambour</h3>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Soupe à l'oignon</h2>
                         <h3 class="description">Revisitée</h3>
@@ -98,7 +98,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Coquilles Saint-Jacques</h2>
                         <h3 class="description">Accompagnées d'une purée de panais</h3>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Magret de canard</h2>
                         <h3 class="description">Et parmentier de pommes de terre</h3>
@@ -133,7 +133,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Pigeonneau d’Ille-et-Vilaine</h2>
                         <h3 class="description">Sur son lit de gnocchis aux légumes</h3>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Pétales de violettes glacés</h2>
                         <h3 class="description">Et purée de noisettes</h3>
@@ -172,7 +172,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Fondant au chocolat</h2>
                         <h3 class="description">Revisité</h3>
@@ -189,7 +189,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Millefeuille croustillant</h2>
                         <h3 class="description">Myrtilles et pâte d’amande</h3>
