--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Tartare de thon</h2>
                         <h3 class="description">Assaisonné au yuzu</h3>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Bouchée de homard croustillant</h2>
                         <h3 class="description">Et sa farandole de petits légumes</h3>
@@ -74,7 +74,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Velouté de cèpes</h2>
                         <h3 class="description">Aux truffes</h3>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Poulet rôti aux herbes de Provence</h2>
                         <h3 class="description">Et sa crème de truffe</h3>
@@ -115,7 +115,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Langouste rôtie</h2>
                         <h3 class="description">Et ses légumes de saison</h3>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Côte de boeuf Angus</h2>
                         <h3 class="description">Aux agrumes</h3>
@@ -154,7 +154,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_1">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Farandole de desserts</h2>
                         <h3 class="description">Du chef</h3>
@@ -171,7 +171,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Crème brulée</h2>
                         <h3 class="description">Revisitée</h3>
@@ -188,7 +188,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1">
+                <div class="conteneur_E_P_D_niveau_1 element_3">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Tiramisu</h2>
                         <h3 class="description">Au piment d'Espelette et à la truffe noire</h3>
