ajustement h2 menu index.html

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
     </section>
 
+    
+        <h2 class="titre_accueil_restaurants">Restaurants</h2>
     <section class="restaurants" id="restaurants">
-        <div class="titre_accueil_restaurants">
-            <h2>Restaurants</h2>
-        </div>
+        
 
 
         <a href="restaurant_1.html" class="lien_resto">
