--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -15,7 +15,8 @@
     <header>
         <div class="title_resto">
             <a href="index.html">
-                <img src="logo/arrow-left-solid.svg" alt="fleche">
+                <!-- <img src="logo/arrow-left-solid.svg" alt="fleche"> -->
+                <i class="fas fa-arrow-left"></i>
             </a>
             <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
         </div>
