--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -14,8 +14,8 @@
 <body>
     <header>
         <div class="title_resto">
-            <a href="index.html">
-                <img src="logo/arrow-left-solid.svg" alt="fleche">
+            <a href="index.html" aria-label="retour accueil">
+                <i class="fas fa-arrow-left"></i>
             </a>
             <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
         </div>
