retrait svg ohmyfood

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <div class="loader"></div>
     </div>
     <header>
-        <div class="title">
-            <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
-        </div>
+            <h1>ohmyfood</h1>
     </header>
 
     <section class="accueil">
