--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -17,7 +17,7 @@
             <a href="index.html" aria-label="retour accueil">
                 <i class="fas fa-arrow-left"></i>
             </a>
-            <img src="logo/ohmyfood@2x_title.svg" alt="logo_ohmyfood" id="logo_omyfood_header">
+            <h1>ohmyfood</h1>
         </div>
     </header>
 
