--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
 
     <footer>
-        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood-footer" id="logo-footer">
+        <h3>ohmyfood</h3>
 
         <div class="element-logo">
             <img src="logo/utensils-solid.svg" alt="logo_store">
