--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -219,8 +219,7 @@
 
 
     <footer>
-        <img src="logo/ohmyfood@2x.svg" alt="logo_ohmyfood" id="logo-footer">
-
+        <h3>ohmyfood</h3>
         <div class="element-logo">
             <img src="logo/utensils-solid.svg" alt="logo_store">
             <h2>Proposer un restaurant</h2>
