test witdh html

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a href="restaurant_1.html" class="lien_resto">
             <div class="carte_resto">
                 <div class="images_icone_nouveau">
-                    <img src="images/pallette_gout_small.jpg" alt="" class="photo_resto">
+                    <img src="images/pallette_gout_small.jpg" alt="" class="photo_resto" width="auto" height="auto">
                     <div class="nouveau" id="nouveau_1">
                         <p>Nouveau</p>
                     </div>
