--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <a href="restaurant_2.html" class="lien_resto">
             <div class="carte_resto">
                 <div class="images_icone_nouveau">
-                    <img src="images/note_enchantee_small.jpg" alt="La note enchantée" class="photo_resto">
+                    <img src="images/note_enchantee_small.jpg" alt="La note enchantée" class="photo_resto" width="880px" height="480px">
                     <div class="nouveau" id="nouveau_2">
                         <p>Nouveau</p>
                     </div>
@@ -119,7 +119,7 @@
         <a href="restaurant_3.html" class="lien_resto">
             <div class="carte_resto">
                 <div class="images_icone_nouveau">
-                    <img src="images/a_la_francaise_small.jpg" alt="" class="photo_resto">
+                    <img src="images/a_la_francaise_small.jpg" alt="" class="photo_resto" width="880px" height="480px">
                     <div class="nouveau" id="nouveau_3">
                         <p>Nouveau</p>
                     </div>
@@ -140,7 +140,7 @@
         <a href="restaurant_4.html" class="lien_resto">
             <div class="carte_resto">
                 <div class="images_icone_nouveau">
-                    <img src="images/delice_sens_small.jpg" alt="" class="photo_resto">
+                    <img src="images/delice_sens_small.jpg" alt="" class="photo_resto" width="880px" height="480px">
                     <div class="nouveau" id="nouveau_4">
                         <p>Nouveau</p>
                     </div>
