--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Accueil du site Ohmyfood">
     <script src="https://kit.fontawesome.com/c78fdf2e47.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="data:;base64,="> <!-- favicon error -->
     <link rel="stylesheet" href="style.css">
     <title>Ohmyfood</title>
 </head>
