--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="accueil">
 
         <div class="location">
-            <img src="logo/map-marker-alt-solid.svg" alt="logo_map_marker" class="logo_map_marker">
+            <i class="fas fa-map-marker-alt"></i>
             <h1>Paris, Belleville</h1>
         </div>
 
@@ -49,21 +49,21 @@
             <div class="icon_number">
                 <p>1</p>
             </div>
-            <img src="logo/mobile-alt-solid.svg" alt="logo_mobile" class="logo_fonctionnement">
+            <i class="fas fa-mobile-alt"></i>
             <h3>Choisissez un restaurant</h3>
         </div>
         <div class="composer">
             <div class="icon_number">
                 <p>2</p>
             </div>
-            <img src="logo/list-ul-solid.svg" alt="logo_liste" class="logo_fonctionnement">
+            <i class="fas fa-list-ul"></i>
             <h3>Composez votre menu</h3>
         </div>
         <div class="deguster">
             <div class="icon_number">
                 <p>3</p>
             </div>
-            <img src="logo/store-solid.svg" alt="logo_restaurant" class="logo_fonctionnement">
+            <i class="fas fa-store"></i>
             <h3>dégustez au restaurant</h3>
         </div>
 
@@ -164,12 +164,12 @@
         <h3>ohmyfood</h3>
 
         <div class="element-logo">
-            <img src="logo/utensils-solid.svg" alt="logo_store">
+            <i class="fas fa-utensils"></i>
             <h2>Proposer un restaurant</h2>
         </div>
 
         <div class="element-logo">
-            <img src="logo/hands-helping-solid.svg" alt="logo_handshake">
+            <i class="fas fa-hands-helping"></i>
             <h2>Devenir partenaire</h2>
 
         </div>
