replace footer every resto

--- a/restaurant_4.html
+++ b/restaurant_4.html
@@ -220,17 +220,17 @@
         <h3>ohmyfood</h3>
 
         <div class="element-logo">
-            <img src="logo/utensils-solid.svg" alt="logo_store">
+            <i class="fas fa-utensils"></i>
             <h2>Proposer un restaurant</h2>
         </div>
 
         <div class="element-logo">
-            <img src="logo/hands-helping-solid.svg" alt="logo_handshake">
+            <i class="fas fa-hands-helping"></i>
             <h2>Devenir partenaire</h2>
 
         </div>
 
-        <h1>Mentions légales</h1>
+        <h2>Mentions légales</h2>
         <a class="lien_contact" href="mailto:ohmyfood.contact@mail.fr">
             <h2>Contact</h2>
         </a>
