finition footer et fleche

--- a/restaurant_1.html
+++ b/restaurant_1.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="conteneur_E_P_D">
-                <div class="conteneur_E_P_D_niveau_1 element_2">
+                <div class="conteneur_E_P_D conteneur_E_P_D_niveau_1 element_2">
                     <div class="conteneur_titre_et_description">
                         <h2 class="titre_food">Foie gras de canard mi-cuit</h2>
                         <h3 class="description">Et ses copeaux de truffe noire</h3>
